# avetechnologies

./: .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
api/annotated_types/: __init__.py  phone.py
api/dependencies/: phone_service.py
api/exception_handlers/: factory.py
api/exeptions/: __init__.py  base.py
api/v1/: __init__.py
api/v1/phone/: __init__.py  handlers.py
app/: __init__.py  app.py
app/middlewares/: setup.py
app/routers/: setup.py
server/: __main__.py
src/config/: __init__.py  redis.py
src/exceptions/: __init__.py  base.py
src/services/phone/: phone.py
src/settings/: _base.py  redis.py  server.py  settings.py
src/types/: __init__.py  exceptions.py
src/types/phone/: phone.py
