[project]
name = "avetechnologies"
version = "0.1.0"
description = ""
authors = [
    {name = "n.mikhailovskii",email = "n.mikhailovskii@atomgroup.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "redis (>=6.1.0,<7.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "orjson (>=3.10.18,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pre-commit = "^4.2.0"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "UP",
    "ASYNC",
    "S",
    "BLE",
    "PIE",
    "T20",
    "C4",
    "RET",
    "COM",
    "I",
    "RUF200",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
    "COM812",
    "S101",
    "S104",
    "BLE001",
    "RET503",
]
fixable = ["ALL"]
unfixable = ["B", "N"]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
    'F403',
    'F405',
]
"tests/*" = ["S101", "D103", "D101", "D102"]
"*pb2*.py" = ["I", "F401", "E402", "F541", "UP"]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"